--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -1,6 +1,7 @@
 .main-body{
     height: 100vw;
     width: 100vw;
-    background-color: #E99D72;
+    background-color: #a38226;
     border-radius: 30px;
+    display: flex;
 }
