--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -1,7 +1,7 @@
 .main-body{
     height: 100vw;
     width: 100vw;
-    background-color: #a38226;
+    background-color: #d19f16;
     border-radius: 30px;
     display: flex;
 }
